fix: Use overflow: hidden for increassing the filter area height instead of media query

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -109,7 +109,7 @@ label {
 
 nav {
   width: 100%;
-  height: 150px;
+  height: 130px;
   background-color: #252831;
   text-align:center;
   display: flex;
@@ -137,9 +137,10 @@ nav {
 
 .filter-options {
   width: 100%;
-  height: 90px;
+  height: auto;
   background-color: $primary-color;
   padding: 1em 0;
+  overflow: overlay;
   h2 {
     color: white;
     font-size: 1.3rem;
@@ -374,8 +375,8 @@ nav {
   color: #666;
 }
 
-@media screen and (max-width: 479px) {
-  .filter-options {
-    height: 140px;
-  }
-}
+// @media screen and (max-width: 497px) {
+//   .filter-options {
+//     height: 140px;
+//   }
+// }
